
	Example:

	A_ACCEPT:info	loc	net	...

    d)  The BLACKLIST_DISPOSITION, MACLIST_DISPOSITION and
        TCP_FLAGS_DISPOSITION options may be set as follows:

	BLACKLIST_DISPOSITION 	      A_DROP or A_REJECT
	MACLIST_DISPOSITION           A_DROP 
				      A_REJECT, unless
				               MACLIST_TABLE=mangle
        TCP_FLAGS_DISPOSITION         A_DROP or A_REJECT

    e)  An 'audit' option has been added to the
        /etc/shorewall/blacklist file which causes the packets matching
        the entryto be audited. 'audit' may not be specified together
        with 'accept'.

    f)  With the exception of 'Limit', the builtin actions
        (dropBroadcast, rejNonSyn, etc.) now support
        an 'audit' parameter which causes all ACCEPT, DROP and REJECTs
        performed by the action to be audited. This allows creation of
        audited versions of the Shorewall-provided default actions
        (action.Drop and action.Reject).

----------------------------------------------------------------------------
             I V.  R E L E A S E  4 . 4  H I G H L I G H T S
----------------------------------------------------------------------------

1)  Support for Shorewall-shell has been discontinued. Shorewall-perl
    has been combined with Shorewall-common to produce a single
    Shorewall package.

2)  Support for the "Hierarchical Fair Service Curve" (HFSC) queuing
    discipline has been added. HFSC is superior to the "Hierarchical
    Token Bucket" queuing discipline where realtime traffic such as
    VOIP is being used.

    HTB remains the default queuing discipline.

3)  Support for the "flow" traffic classifier has been added. This
    classifier can help prevent multi-connection applications such as
    BitTorrent from using an unfair amount of bandwidth.

4)  The Shorewall documentation and man pages have been purged of
    information about earlier Shorewall releases. The documentation