@@ -208,4 +208,6 @@ MACLIST_DISPOSITION=REJECT
 
 TCP_FLAGS_DISPOSITION=DROP
 
+SMURF_DISPOSITION=DROP
+
 #LAST LINE -- DO NOT REMOVE
