@@ -169,4 +169,6 @@ BLACKLIST_DISPOSITION=DROP
 
 TCP_FLAGS_DISPOSITION=DROP
 
+SMURF_DISPOSITION=DROP
+
 #LAST LINE -- DO NOT REMOVE
