@@ -113,12 +113,16 @@ All bug fixes from 4.4.19.1 - 4.4.19.4.
 				               MACLIST_TABLE=mangle
         TCP_FLAGS_DISPOSITION         A_DROP or A_REJECT
 
-    e)  An 'audit' option has been added to the
+    e)  A SMURF_DISPOSITION option has been added to
+        shorewall.conf. The default value is DROP; if the option is set
+        to A_DROP, then dropped smurfs are audited.
+
+    f)  An 'audit' option has been added to the
         /etc/shorewall/blacklist file which causes the packets matching
         the entryto be audited. 'audit' may not be specified together
         with 'accept'.
 
-    f)  With the exception of 'Limit', the builtin actions
+    g)  With the exception of 'Limit', the builtin actions
         (dropBroadcast, rejNonSyn, etc.) now support
         an 'audit' parameter which causes all ACCEPT, DROP and REJECTs
         performed by the action to be audited. This allows creation of
